Refactor folder metadata updating: enhance `UpdateFolderInfoContent` to handle media file checks, improve logging, and add synchronized file info updates; update `TableUtils`, `Sorter`, and `FileUtils` with helper methods for folder and file processing.