@@ -1,71 +1,79 @@
 # MDir_FX — Smart Media Organizer
 
-Organize photos and videos effortlessly with deduplication, batch copy, and timestamp editing.
+MDir_FX is a media organization tool designed to help manage photos and videos on external storage devices. It provides features such as duplicate detection, batch copying, and date/time editing.
 
-## **This project is not yet complete. Use at your own risk; you are responsible for any damage caused.**
-# MDir_FX
-MDir_FX helps organize pictures and videos to an external hard drive.
-The project has been written with OpenJDK 14 and OpenJFX 14.
+> **Warning**  
+> This project is currently under development and is not yet ready for public use. Use it at your own risk. The author is not responsible for any data loss, file corruption, or other damage caused by using this software.
 
-** Features **
-* Date and time editor
-* Avoid duplicates to save space
-* Batch copy
+## Overview
 
-### License
-This program is not ready for public use, but  GPLv3 will be used.
+MDir_FX helps organize pictures and videos, especially when transferring or maintaining media collections on external hard drives.
 
-### 📦 Third-Party repositories
+The project is developed using:
 
-| Library                | Version      | License            | Project URL                                      | Notes                               |
-|------------------------|--------------|--------------------|--------------------------------------------------|-------------------------------------|
-| Apache Commons Imaging | 1.0.0-alpha6 | Apache License 2.0 | https://github.com/apache/commons-imaging        | Previously Sanselan                 |
-| Ikonli                 | 12.4.0       | Apache License 2.0 | https://github.com/kordamp/ikonli                | —                                   |
-| Metadata-extractor     | 2.14.0       | Apache License 2.0 | https://github.com/drewnoakes/metadata-extractor | —                                   |
-| OpenJFX                | 24.0.2       | GPLv2              | https://github.com/openjdk/jfx                   | —                                   |
-| OSHI                   | 6.8.2        | MIT License        | https://github.com/oshi/oshi                     | —                                   |
-| JavaCV                 | 1.5.10       | Apache License 2.0 | https://github.com/bytedeco/javacv               | Version not specified               |
-| VLCJ                   | 4.5.2        | GPLv3              | https://github.com/caprica/vlcj                  | —                                   |
-| TwelveMonkeys ImageIO  | 3.5          | BSD 3-Clause       | https://github.com/haraldk/TwelveMonkeys         | Modules: imageio-jpeg, imageio-tiff |
+- OpenJDK 24
+- OpenJFX 25.0.1
 
-</br>
-</br>
+## Features
 
-## Supported file formats
+- Date and time editor
+- Duplicate detection to help save storage space
+- Batch copy functionality
+- Support for common image, video, and RAW file formats
 
-| Category  | Formats                               |
-|-----------|----------------------------------------|
-| 🎬 Video  | 3GP • AVI • MKV • MOV • MP4 • MPG      |
-| 🖼️ Picture | BMP • GIF • JPG/JPEG • PNG • TIF/TIFF  |
-| 📷 Raw    | CR2 • NEF                              |
+## License
 
-This project is not yet ready for public use.
-Any inconvenience caused by this project is in your responsibility.
+This project is not currently ready for public release. The intended license for this project is **GPLv3**.
 
-## Compiling the project
-### Required versions
-GraalVM 22.0.2
-JavaFX 24.0.2
+## Third-Party Repositories
 
-``` IntelliJ Module .iml file should look something like this
+| Library                | License            | Project URL                                      | Notes                               |
+|------------------------|--------------------|--------------------------------------------------|-------------------------------------|
+| Apache Commons Imaging | Apache License 2.0 | https://github.com/apache/commons-imaging        | Previously Sanselan                 |
+| Ikonli                 | Apache License 2.0 | https://github.com/kordamp/ikonli                | —                                   |
+| JavaCV                 | Apache License 2.0 | https://github.com/bytedeco/javacv               | Version not specified               |
+| Metadata Extractor     | Apache License 2.0 | https://github.com/drewnoakes/metadata-extractor | —                                   |
+| OpenJFX                | GPLv2              | https://github.com/openjdk/jfx                   | —                                   |
+| OSHI                   | MIT License        | https://github.com/oshi/oshi                     | —                                   |
+| TwelveMonkeys ImageIO  | BSD 3-Clause       | https://github.com/haraldk/TwelveMonkeys         | Modules: imageio-jpeg, imageio-tiff |
+| VLCJ                   | GPLv3              | https://github.com/caprica/vlcj                  | —                                   |
+
+## Supported File Formats
+
+| Category | Formats                                             |
+|----------|-----------------------------------------------------|
+| Video    | 3GP, AVI, MKV, MOV, MP4, MPG                        |
+| Image    | BMP, GIF, HEIC(not tested), JPG/JPEG, PNG, TIF/TIFF |
+| RAW      | CR2, DNG, NEF(not tested)                           |
+
+## Development Status
+
+MDir_FX is still under active development and should be considered experimental.
+
+Use this software carefully, especially when working with important media files. It is strongly recommended to keep backups before copying, editing, or organizing files with this application.
+
+## Compiling the Project
+
+### Required Versions
+
+- GraalVM 22.0.2
+- JavaFX 24.0.2
+
+### IntelliJ IDEA Module Configuration
+
+The IntelliJ IDEA `.iml` module file should look similar to the following:
+```xml
 <?xml version="1.0" encoding="UTF-8"?>
 <module version="4">
   <component name="AdditionalModuleElements">
     <content url="file://$MODULE_DIR$" dumb="true">
-      <sourceFolder url="file://$MODULE_DIR$/src/main/java/com/girbola/fxml" type="java-resource" />
       <sourceFolder url="file://$MODULE_DIR$/src/main/resources/bundle" type="java-resource" />
       <sourceFolder url="file://$MODULE_DIR$/src/main/resources/fonts" type="java-resource" />
       <sourceFolder url="file://$MODULE_DIR$/src/main/resources/img" type="java-resource" />
+      <sourceFolder url="file://$MODULE_DIR$/src/main/resources/sql" type="java-resource" />
       <sourceFolder url="file://$MODULE_DIR$/src/main/resources/themes" type="java-resource" />
-      <sourceFolder url="file://$MODULE_DIR$/src/test" isTestSource="true" />
-      <excludeFolder url="file://$MODULE_DIR$/.ideaold" />
     </content>
   </component>
 </module>
 ```
 
-### Compiling
-#### JVM options
-```
---module-path C:\Programs\javafx-sdk-24.0.2\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.base,javafx.media,javafx.swing
-```
